name:                pure-limiter
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-limiter
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.8 && < 5,
    pure-json >= 0.7 && < 1,
    pure-time >= 0.7 && < 1

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.Limiter

  default-language: Haskell2010